syntax = "proto3";

package interestcal;
option go_package = ".;interestcalpb";

message NewDeposit  {
  string account = 1;
  string account_type = 2;
  float apy = 3 ;
  float years = 4 ;
  float amount = 5;
  float delta = 6;
}

message Deposit  {
  string account = 1;
  string account_type = 2;
  float apy = 3 ;
  float years = 4 ;
  float amount = 5;
  float delta = 6;
}

message NewBank {
  string name = 1;
  repeated NewDeposit new_deposits = 2;
}

message Bank {
  string name = 1;
  repeated Deposit deposits = 2;

  float delta = 3;
}

message CreateInterestRequest {
  repeated NewBank new_banks = 1;
}

message CreateInterestResponse {
  repeated Bank banks = 1;

  float delta = 2;
}

// Interest calculation service
// can be like regular method CalculateInterest - does not have to be resource oriented
// or CreateInterest -- more resource oriented style https://cloud.google.com/apis/design/standard_methods
// Keeping it more like resource oriented
service InterestCalService {
  rpc CreateInterest(CreateInterestRequest) returns (CreateInterestResponse);
}
